Fix misaligned dropdown

--- a/common/containers/Tabs/Swap/components/CurrencySwap.scss
+++ b/common/containers/Tabs/Swap/components/CurrencySwap.scss
@@ -34,8 +34,7 @@
   }
   &-dropdown {
     display: inline-block;
-    margin-top: 0.6rem;
-    margin-bottom: 0.6rem;
+    margin: 0.5rem 0;
   }
 
   &-input {
